[gd_scene load_steps=5 format=3 uid="uid://biyuguwhlm3hr"]

[ext_resource type="Script" uid="uid://r0w2vtp168hy" path="res://scenes/player.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://djdyc7y3osyrb" path="res://sprites/Player.png" id="2_v6fml"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v6fml"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6fml"]
size = Vector2(2, 2)

[node name="Player" type="CharacterBody2D"]
collision_layer = 128
script = ExtResource("1_v6fml")

[node name="PlatformingHB" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v6fml")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTime" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="JumpBuffer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="CrouchAnim" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.3

[node name="Grabbers" type="Node2D" parent="."]

[node name="Left" type="Area2D" parent="Grabbers"]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grabbers/Left"]
position = Vector2(-8, -1)
shape = SubResource("RectangleShape2D_v6fml")
debug_color = Color(0.807136, 0.389189, 0.388529, 0.42)

[node name="Right" type="Area2D" parent="Grabbers"]
unique_name_in_owner = true
position = Vector2(148, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grabbers/Right"]
position = Vector2(-140, -1)
shape = SubResource("RectangleShape2D_v6fml")
debug_color = Color(0.807136, 0.389189, 0.388529, 0.42)

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_v6fml")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="LivesText" type="RichTextLabel" parent="Hud"]
offset_right = 87.0
offset_bottom = 27.0
text = "Lives: "

[connection signal="timeout" from="Timers/CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="area_entered" from="Grabbers/Left" to="." method="_on_left_area_entered"]
[connection signal="area_entered" from="Grabbers/Right" to="." method="_on_right_area_entered"]
